--- a/VRChat/40/1201140.html
+++ b/VRChat/40/1201140.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "v+Fwref6xPuwd0VQTdcowu9wClfMp0gpgUlAzseMnV0="></script>
+    "CC2kmaKeBc2N7uf/dqvHbmEkcIy8yIFXnUVX41IULTo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC想定アイテム　脳みそ培養槽(brainpod)","description":"「最近人の形をとることに疲れた……。」\n\n「脳だけを外に摘出したい！」\n\n「バーチャルサ〇トリウムのせんせえになりたい！」\n\n「脳みそツインドライブで人類と対話したい。」\n\nそのような方々へのために、今回は脳みそ培養槽を用意してみました。ワールドに並べるのもよし、アバターとして使うのもよし、または自分のアバターへのアクセントとしても。\n貴方の脳みそとそれをサポートする培養槽は役目を果たしてくれるでしょう。VRC外のコンテンツへの使用も目的次第では制限しない形をなるべく取りたいと思います。\n\n以下Readmeより抜粋\n\n内容物・(解説/注意)\n■brainpodpac. unity package\n\n/brainpod(ブレインポッド).fbx\n/brainpod.prefab\n(アバターとして使う事を想定して7倍サイズに拡大し、パーティクルのサイズを調整したものになります。\ngenericアバターとして使用される際は視点をポッドの上か、天井と脳の間の高さに調整することをお勧めします。)\n/brainpod 1.prefab\n(おおよそ一般的なサイズを想定したパーティクルの調整をしてあります。\nこれらのprefabはhierarchyへ、ドラッグアンドドロップすることにより使用できます。)\n\n/Material\nair(パーティクルの泡用)\nbrainpod(モデル本体用)\ngreenpod(モデル表面のガラス用)\ninternalpod(noriben氏のゆがみシェーダー用、後述)\n\n/Texture\nairtex(泡用)\nbrainpodbasepomplete2(モデル本体用)\nbrainpodcase\n(モデル表面のガラス用。マテリアルのカラーを変更することである程度色が変わるとは思いますが、\n各自で半透明カラーのPNGを用意していただきテクスチャを差し替えることでより効果的に変更ができます。)\nNormal(本体用のノーマルマップ、名前が長いので省略します。)\n\nUnity-Chan Toon Shader Ver.2.0.9\n(ユニティちゃんトゥーンシェーダーを利用される場合は下記のライセンスに従うようにお願いします。)\nhttp://unity-chan.com/contents/guideline/\n\nDistortionSpace.Shader\n(noriben氏のゆがみシェーダー。この度は使用に関する許可、ありがとうございました。\nboothにて同様のものを入手することができます。\nシェーダー自体は無料ではありますが、干し芋を貰えると励みになるとのことです。)\nhttps://noriben.booth.pm/items/1182866\n\n使用上の注意に関して(サポートはtwitter、@keny_dogにて受け付けます)\n■許可事項(allowed)■\n・購入者が使用する際の改変は自由ですが、改変による不利益は自己責任でお願いします。\n\n・VRChatの内容をメインとした動画等への使用、もしくは映り込みは営利非営利に関わらず自由です。(ご一報頂くとありがたいです)\n\n・また、非営利目的のゲームやワールドへの仕様は制限しておりません\n(For non-profit game or world in the VRC content use, there's no restrictions.)\n\n・仮に、営利目的のゲームその他のコンテンツに使用する際、当モデルがコンテンツの主軸にならないのであれば使用を極力制限しない形をとりたいと考えています。(応相談)\n\n■禁止事項(Prohibited)■\n・再配布の禁止\n(Do not redistribute this 3D model)\n\n・当モデルを使用しての宗教、暴力、他者への誹謗中傷、啓蒙、政治活動はその一切を禁止させていただいております。\n(No violation, political act, religious activity)\n\n・自作発言\n(Do not impersonate somebody else by using this avatar.)\n\n\n■免責事項■\n・当モデルは改変の有無にかかわらず、著作権は当モデルの制作者に帰属します。\n\n・当モデルを使用することにより発生した使用者に不利な問題に対して当アカウントは一切の責任を負いません。\n(I'll not take take any responsibility for any loss resulting from using this model.)\n\n■最後に(余談)■\n今回のモデルを制作するにあたって意見をくださったAllostericさん、シェーダーの使用許可を下さったnoribenさんに\nこの場を借りて感謝申し上げます。","url":"https://booth.pm/ja/items/1201140","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2fd764ae-e5c6-4c38-af00-f5d1922032d1/i/1201140/0488ee41-de87-4fe4-99c0-9381e9b9a5ff_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v+Fwref6xPuwd0VQTdcowu9wClfMp0gpgUlAzseMnV0="></script>
+    nonce="CC2kmaKeBc2N7uf/dqvHbmEkcIy8yIFXnUVX41IULTo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      315
+                                      314
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -201,7 +201,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      315
+                                      314
                                     </div>
                                   </div></a>
                                 </div>
@@ -482,9 +482,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
@@ -660,7 +661,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
